2009-09-10  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/ui/linkwidget.py:
	Set the label of LinkButton.
	Actually, as stated in the documentation setting only the uri should
	be enough but, surprinsingly, this doesn't work with pygtk >=2.16

2009-09-10  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jurbanski

	* flumotion/component/plugs/Makefile.am:
	* flumotion/component/plugs/plugs.xml:
	Add wizard entries for requestlogger and forcedownload plugs
	* flumotion/component/plugs/wizard.glade (added):
	* flumotion/component/plugs/wizard_gtk.py (added):
	Add an UI for two http-server plugs.
	Closes #1337

2009-09-10  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jurbanski

	* data/glade/ondemand-wizard.glade:
	Add the plug area into the ondemand step and remove the static UI for
	the plugs used
	* flumotion/admin/assistant/interfaces.py:
	* flumotion/admin/assistant/models.py:
	Allow deleting a plug from a component
	* flumotion/common/registry.py:
	Add a new wizard plug type to be used by the httpserver plugs
	* flumotion/scenario/steps/ondemandstep.py:
	Get rid of the code that adds and treats the plugs. Do it dynamically
	using a PlugArea
	See #1337

2009-09-10  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/plugs/adminaction.py:
	* flumotion/component/plugs/request.py:
	Fix a typo. Use errors.PropertyError instead of errors.PropertiesError
	that doesn't exist.

2009-09-10  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/twisted/flavors.py:
	Add helper methods that will allow objects to listen on uiState
	observer events.
	Fixes #1357

2009-09-10  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jurbanski

	* data/glade/httpstreamer-wizard.glade:
	* flumotion/admin/assistant/interfaces.py:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	Adapt cortado plug to the new plugarea
	* flumotion/scenario/steps/httpstreamersteps.py:
	* flumotion/ui/Makefile.am: